Changes In Slider Made

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class='wrapper'>
 <div id='slider'>
-<img id='1' src='images/image1.jpg'/>
-<img id='2' src='images/image2.jpg'/>
-<img id='3' src='images/image3.jpg'/>
-<img id='4' src='images/image4.jpg'/>
-<img id='5' src='images/image5.jpeg'/>
+<img id='1' src='images/chowmein.jpeg'/>
+<img id='2' src='images/malai.jpeg'/>
+<img id='3' src='images/potatoes.jpeg'/>
+<img id='4' src='images/vada.jpeg'/>
+<img id='5' src='images/dosa.jpeg'/>
 </div>
 <a href='#' class='left' onclick='prev(); return false;'>Previous</a>
 <a href='#' class='right' onclick='next(); return false;'>Next</a>
